feat(ci): add backend unit tests + CI workflow